--- a/package.json
+++ b/package.json
@@ -8,13 +8,23 @@
         "@commitlint/cli": "^13.1.0",
         "@commitlint/config-conventional": "^13.1.0",
         "@types/node": "^16.9.2",
+        "@typescript-eslint/eslint-plugin": "^4.31.1",
+        "@typescript-eslint/parser": "^4.31.1",
         "commitizen": "^4.2.4",
         "cz-conventional-changelog": "^3.3.0",
-        "husky": "^7.0.2"
+        "eslint": "^7.32.0",
+        "eslint-config-airbnb-base": "^14.2.1",
+        "eslint-import-resolver-typescript": "^2.5.0",
+        "eslint-plugin-import": "^2.24.2",
+        "husky": "^7.0.2",
+        "typescript": "^4.4.3"
     },
     "scripts": {
         "prepare": "husky install",
-        "commit": "git-cz"
+        "commit": "git-cz",
+
+        "build": "tsc",
+        "start:dev": "nodemon ./src/index.ts"
     },
     "repository": {
         "type": "git",
