--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
     "module": "commonjs",
+    "rootDir": "./src",
+    "outDir": "./dist",
     "target": "es2017",
-    "noImplicitAny": false,
     "sourceMap": true,
-    "outDir": "build",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "importHelpers": true,
