--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,7 @@
     "rules": {
         "no-unused-vars": "warn",
         "no-console": "off",
+        "class-methods-use-this": "off",
         "import/extensions": [
             "error",
             "ignorePackages",
