--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
         "no-unused-vars": "warn",
         "no-console": "off",
         "class-methods-use-this": "off",
+        "max-len": "off",
         "import/extensions": [
             "error",
             "ignorePackages",
