--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "devDependencies": {
         "@commitlint/cli": "^13.1.0",
         "@commitlint/config-conventional": "^13.1.0",
-        "@types/node": "^16.9.2",
+        "@types/node": "^16.9.6",
         "@typescript-eslint/eslint-plugin": "^4.31.1",
         "@typescript-eslint/parser": "^4.31.1",
         "commitizen": "^4.2.4",
@@ -31,7 +31,7 @@
     "scripts": {
         "prepare": "husky install",
         "commit": "git-cz",
-        "build": "tsc",
+        "build": "tsc --declaration",
         "start:dev": "nodemon ./src/index.ts"
     },
     "repository": {
